force-app/main/default/objects/Baby__c/Baby__c.object-meta.xml
<CustomObject>
    <label>Family Member</label>
    <nameField>
        <label>Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Family Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>