force-app/main/default/objects/Baby__c/fields/AC_Certificate__c.field-meta.xml
<CustomField>
    <fullName>AC_Certificate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AC Certificate</label>
    <type>Checkbox</type>
</CustomField>