force-app/main/default/objects/Baby__c/fields/AC_Hardcopy_Sent__c.field-meta.xml
<CustomField>
    <fullName>AC_Hardcopy_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AC Hardcopy Sent</label>
    <type>Checkbox</type>
</CustomField>