force-app/main/default/objects/Baby__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>IF( AND(
NOT( ISBLANK( Collection_Date__c ) ) ,
 Lab__r.Is_Voided_LU__c = false),
 If ( Collection_Date__c + 365 &gt;  Today(), 0,
  IF( DATE( YEAR (TODAY()) , MONTH( Collection_Date__c ) , DAY( Collection_Date__c ) ) &lt;=  Today(),
     YEAR (Today()) - YEAR ( Collection_Date__c ),
     YEAR (Today()) - YEAR ( Collection_Date__c ) -1 )), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>