force-app/main/default/objects/Baby__c/fields/Age_Earlier__c.field-meta.xml
<CustomField>
    <fullName>Age_Earlier__c</fullName>
    <description>Provides Baby&apos;s Birthday earlier, used for Handwrytten so we can send cards before actual birthday. Currenly set up for three weeks prior.</description>
    <formula>If ( AND (Age__c &gt;= 0, Age__c &lt;= 5), Age__c + 1, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Provides Baby&apos;s Birthday earlier, used for Handwrytten so we can send cards before actual birthday. Currenly set up for three weeks prior.</inlineHelpText>
    <label>Age - Earlier</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>