force-app/main/default/objects/Baby__c/fields/Age_Ordinal_Number__c.field-meta.xml
<CustomField>
    <fullName>Age_Ordinal_Number__c</fullName>
    <formula>CASE ( Age__c ,
1, &quot;1st&quot;,
2, &quot;2nd&quot;,
3, &quot;3rd&quot;,
4, &quot;4th&quot;,
5, &quot;5th&quot;,
6, &quot;6th&quot;,
7, &quot;7th&quot;,
8, &quot;8th&quot;,
9, &quot;9th&quot;,
10, &quot;10th&quot;,
&quot;&quot;)</formula>
    <label>Age Ordinal Number</label>
    <type>Text</type>
</CustomField>