force-app/main/default/objects/Baby__c/fields/Allow_for_Product_Change_after_Autobill__c.field-meta.xml
<CustomField>
    <fullName>Allow_for_Product_Change_after_Autobill__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field is only accessible by Admins. CS Team will ask for permission to change Products Stored so admin can check box, Otherwise, CS Team will get error message.</description>
    <label>Allow for Product Change after Autobill</label>
    <type>Checkbox</type>
</CustomField>