force-app/main/default/objects/Baby__c/fields/Assigned_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Sales_Rep__c</fullName>
    <description>This is the assigned sales rep for this client&apos;s baby.</description>
    <formula>TEXT(Lab__r.Cord_Blood_Order__r.Sales_rep__c)</formula>
    <label>Assigned Sales Rep</label>
    <type>Text</type>
</CustomField>