force-app/main/default/objects/Baby__c/fields/Baby_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Baby_First_Name__c</fullName>
    <formula>IF (
OR (
CONTAINS(Name_of_Child__c, &quot;Baby&quot;),
CONTAINS(Name_of_Child__c, &quot;Twin&quot;),
CONTAINS(Name_of_Child__c, &quot;UNA&quot;),
CONTAINS(Name_of_Child__c, &quot;Unknown&quot;),
CONTAINS(Name_of_Child__c, &quot;Female&quot;),
ISBLANK(Name_of_Child__c)),
null,
LEFT( Name_of_Child__c  ,FIND(&quot; &quot;, Name_of_Child__c,1)-1))</formula>
    <inlineHelpText>Returns only the first name upto the first space in the full name of child field.</inlineHelpText>
    <label>Baby First Name</label>
    <type>Text</type>
</CustomField>