force-app/main/default/objects/Baby__c/fields/Babys_Date_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Babys_Date_Of_Birth__c</fullName>
    <description>This is the date of birth from courier pulled from the lab.</description>
    <formula>Lab__r.Birth_Date_from_Courier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the date of birth from courier pulled from the lab.</inlineHelpText>
    <label>Babys Date Of Birth</label>
    <type>Date</type>
</CustomField>