force-app/main/default/objects/Baby__c/fields/CB_Sent__c.field-meta.xml
<CustomField>
    <fullName>CB_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Client indicates sending product via Digital Courier Pick-Up.</inlineHelpText>
    <label>CB Sent</label>
    <type>Checkbox</type>
</CustomField>