force-app/main/default/objects/Baby__c/fields/CB_Sterility_Bottle_ID_AST__c.field-meta.xml
<CustomField>
    <fullName>CB_Sterility_Bottle_ID_AST__c</fullName>
    <label>CB Sterility Bottle ID AST</label>
    <length>100</length>
    <type>Text</type>
</CustomField>