force-app/main/default/objects/Baby__c/fields/CB_Storage_Location__c.field-meta.xml
<CustomField>
    <fullName>CB_Storage_Location__c</fullName>
    <description>Storage Location of the CB sample.</description>
    <inlineHelpText>Storage Location of the CB sample.</inlineHelpText>
    <label>CB Storage Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>