force-app/main/default/objects/Baby__c/fields/CB_Volume_ml__c.field-meta.xml
<CustomField>
    <fullName>CB_Volume_ml__c</fullName>
    <inlineHelpText>Entered as a number, maximum of three digits and one decimal place. For example, 123.4</inlineHelpText>
    <label>CB Volume (ml)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>