force-app/main/default/objects/Baby__c/fields/CD34x10_6_2nd_unit__c.field-meta.xml
<CustomField>
    <fullName>CD34x10_6_2nd_unit__c</fullName>
    <inlineHelpText>Entered as a number, maximum of three digits and two decimal places. For example 123.45.</inlineHelpText>
    <label>CD34x10^6 (2nd unit)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>