force-app/main/default/objects/Baby__c/fields/CD34x10_6__c.field-meta.xml
<CustomField>
    <fullName>CD34x10_6__c</fullName>
    <description>Entered as a number, maximum of three digits and two decimal places. For example 123.45.</description>
    <label>CD34x10^6</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>