force-app/main/default/objects/Baby__c/fields/Certificate_of_Storage__c.field-meta.xml
<CustomField>
    <fullName>Certificate_of_Storage__c</fullName>
    <description>used as the file name for the Certificate of Storage created with Docomotion PDF tool</description>
    <formula>&quot;Certificate of Storage for &quot;&amp;Name_of_Child__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Certificate of Storage</label>
    <type>Text</type>
</CustomField>