force-app/main/default/objects/Baby__c/fields/Child_s_Birthday_in_Current_Month__c.field-meta.xml
<CustomField>
    <fullName>Child_s_Birthday_in_Current_Month__c</fullName>
    <formula>OR(MONTH(today())= MONTH( Collection_Date__c ),MONTH(TODAY()) + 1= MONTH( Collection_Date__c ))</formula>
    <inlineHelpText>Indicates that child&apos;s birthday is in the current month.</inlineHelpText>
    <label>Child&apos;s Birthday in Current Month</label>
    <type>Checkbox</type>
</CustomField>