force-app/main/default/objects/Baby__c/fields/Child_s_Day_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Child_s_Day_of_Birth__c</fullName>
    <formula>DAY( Collection_Date__c )</formula>
    <inlineHelpText>Used to sort list view by day.</inlineHelpText>
    <label>Child&apos;s Day of Birth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>