force-app/main/default/objects/Baby__c/fields/Client_provided_different_Kit_ID__c.field-meta.xml
<CustomField>
    <fullName>Client_provided_different_Kit_ID__c</fullName>
    <description>When this field is populated, email alert is sent to clients@americordblood.com</description>
    <inlineHelpText>When client enters a different ID via Digital Courier Pick-Up</inlineHelpText>
    <label>Client provided different Kit ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>