force-app/main/default/objects/Baby__c/fields/Collection_Date__c.field-meta.xml
<CustomField>
    <fullName>Collection_Date__c</fullName>
    <inlineHelpText>From the DCS</inlineHelpText>
    <label>Collection Date</label>
    <type>Date</type>
</CustomField>