force-app/main/default/objects/Baby__c/fields/Collection_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Collection_Datetime__c</fullName>
    <description>This is the date/time of collection.</description>
    <label>Collection Datetime</label>
    <type>DateTime</type>
</CustomField>