force-app/main/default/objects/Baby__c/fields/Comments_for_Discarded__c.field-meta.xml
<CustomField>
    <fullName>Comments_for_Discarded__c</fullName>
    <inlineHelpText>Additional comments regarding the reason a collection was discarded.</inlineHelpText>
    <label>Comments for Discarded</label>
    <type>TextArea</type>
</CustomField>