force-app/main/default/objects/Baby__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Needed for Docomotion&apos;s PDF tool</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Baby</relationshipName>
    <type>Lookup</type>
</CustomField>