force-app/main/default/objects/Baby__c/fields/Cord_Blood_Cryogenically_Preserved__c.field-meta.xml
<CustomField>
    <fullName>Cord_Blood_Cryogenically_Preserved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cord Blood Cryogenically Preserved</label>
    <type>Checkbox</type>
</CustomField>