force-app/main/default/objects/Baby__c/fields/Cord_Blood_Processing_Method__c.field-meta.xml
<CustomField>
    <fullName>Cord_Blood_Processing_Method__c</fullName>
    <label>Cord Blood Processing Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PrepaCyte</fullName>
            </value>
            <value>
                <fullName>Hetastarch</fullName>
                <default>true</default>
                <label>Hetastarch</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>