force-app/main/default/objects/Baby__c/fields/Cord_Blood_Recieved__c.field-meta.xml
<CustomField>
    <fullName>Cord_Blood_Recieved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cord Blood Recieved</label>
    <type>Checkbox</type>
</CustomField>