force-app/main/default/objects/Baby__c/fields/Cord_Blood_Swab_Sterility_Result__c.field-meta.xml
<CustomField>
    <fullName>Cord_Blood_Swab_Sterility_Result__c</fullName>
    <description>Cord Blood sterility result via swab.</description>
    <label>Cord Blood Swab Sterility Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sterility_Results</valueSetName>
    </valueSet>
</CustomField>