force-app/main/default/objects/Baby__c/fields/Cord_Tissue_Length_cm__c.field-meta.xml
<CustomField>
    <fullName>Cord_Tissue_Length_cm__c</fullName>
    <inlineHelpText>A number with a maximum of two digits and two decimal places. For example, 12.32</inlineHelpText>
    <label>Cord Tissue Length (cm)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>