force-app/main/default/objects/Baby__c/fields/Cord_Tissue_Received__c.field-meta.xml
<CustomField>
    <fullName>Cord_Tissue_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cord Tissue Received</label>
    <type>Checkbox</type>
</CustomField>