force-app/main/default/objects/Baby__c/fields/Cord_Tissue_Swab_Sterility_Result__c.field-meta.xml
<CustomField>
    <fullName>Cord_Tissue_Swab_Sterility_Result__c</fullName>
    <description>Cord Tissue sterility result via swab.</description>
    <label>Cord Tissue  Swab Sterility Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sterility_Results</valueSetName>
    </valueSet>
</CustomField>