force-app/main/default/objects/Baby__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Used in Flow filter for Handwrytten Birthday cards, to omit addresses outside US.</description>
    <formula>Contact__r.MailingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country</label>
    <type>Text</type>
</CustomField>