force-app/main/default/objects/Baby__c/fields/CT_Sent__c.field-meta.xml
<CustomField>
    <fullName>CT_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Client indicates sending product via Digital Courier Pick-Up.</description>
    <label>CT Sent</label>
    <type>Checkbox</type>
</CustomField>