force-app/main/default/objects/Baby__c/fields/CT_Sterility_Bottle_ID_NST__c.field-meta.xml
<CustomField>
    <fullName>CT_Sterility_Bottle_ID_NST__c</fullName>
    <label>CT Sterility Bottle ID NST</label>
    <length>100</length>
    <type>Text</type>
</CustomField>