force-app/main/default/objects/Baby__c/fields/CT_Storage_Location__c.field-meta.xml
<CustomField>
    <fullName>CT_Storage_Location__c</fullName>
    <description>Storage Location of the CT sample.</description>
    <inlineHelpText>Storage Location of the CT sample.</inlineHelpText>
    <label>CT Storage Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>