force-app/main/default/objects/Baby__c/fields/DCS_is_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>DCS_is_Uploaded__c</fullName>
    <description>Used for Checklist to determine if client is ready for AC Cert.</description>
    <formula>Lab__r.DCS_Uploaded__c</formula>
    <label>DCS is Uploaded</label>
    <type>Checkbox</type>
</CustomField>