force-app/main/default/objects/Baby__c/fields/DCS_LU__c.field-meta.xml
<CustomField>
    <fullName>DCS_LU__c</fullName>
    <formula>Text(Lab__r.DCS__c )</formula>
    <inlineHelpText>This is a lookup field from the Lab page.</inlineHelpText>
    <label>DCS</label>
    <type>Text</type>
</CustomField>