force-app/main/default/objects/Baby__c/fields/Discarded__c.field-meta.xml
<CustomField>
    <fullName>Discarded__c</fullName>
    <label>Discarded</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cord Blood</fullName>
            </value>
            <value>
                <fullName>Cord Tissue</fullName>
            </value>
            <value>
                <fullName>Placenta Tissue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>