force-app/main/default/objects/Baby__c/fields/Docusign_DSX_Create_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Docusign_DSX_Create_Date_Time__c</fullName>
    <label>Docusign DSX Create Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>