force-app/main/default/objects/Baby__c/fields/Docusign_is_Completed__c.field-meta.xml
<CustomField>
    <fullName>Docusign_is_Completed__c</fullName>
    <description>Used for Checklist to determine if client is ready for AC Cert.</description>
    <formula>if ( Lab__r.DocuSign_Status__c = &quot;Completed&quot;, true, false)</formula>
    <label>Docusign is Completed</label>
    <type>Checkbox</type>
</CustomField>