force-app/main/default/objects/Baby__c/fields/Donated__c.field-meta.xml
<CustomField>
    <fullName>Donated__c</fullName>
    <label>Donated</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cord Blood</fullName>
            </value>
            <value>
                <fullName>Cord Tissue</fullName>
            </value>
            <value>
                <fullName>Placenta Tissue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>