force-app/main/default/objects/Baby__c/fields/Elapse_Time__c.field-meta.xml
<CustomField>
    <fullName>Elapse_Time__c</fullName>
    <inlineHelpText>Entered in hours and minutes, using this format 10:22 for ten hours and twenty-two minutes</inlineHelpText>
    <label>Elapse Time (Legacy)</label>
    <length>5</length>
    <type>Text</type>
</CustomField>