force-app/main/default/objects/Baby__c/fields/Elapsed_Time_Computed__c.field-meta.xml
<CustomField>
    <fullName>Elapsed_Time_Computed__c</fullName>
    <description>This is the computed elapsed time given the collection and processing date/time, timezones.</description>
    <formula>FORMATDURATION(
Process_Datetime__c-(if(ISPICKVAL(Process_Timezone__c,&apos;US - Central&apos;),1/24,if(ISPICKVAL(Process_Timezone__c,&apos;US - Mountain&apos;),2/24,if(ISPICKVAL(Process_Timezone__c,&apos;US - Pacific&apos;),3/24,0)))),
Collection_Datetime__c-(if(ISPICKVAL(Collection_Timezone__c,&apos;US - Central&apos;),1/24,if(ISPICKVAL(Collection_Timezone__c,&apos;US - Mountain&apos;),2/24,if(ISPICKVAL(Collection_Timezone__c,&apos;US - Pacific&apos;),3/24,0))))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Elapsed Time Computed</label>
    <type>Text</type>
</CustomField>