force-app/main/default/objects/Baby__c/fields/Exosome_Final_Prod_Concent_Exo_uL__c.field-meta.xml
<CustomField>
    <fullName>Exosome_Final_Prod_Concent_Exo_uL__c</fullName>
    <label>Exosome Final Prod Concent. (Exo #/uL)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>