force-app/main/default/objects/Baby__c/fields/Exosome_Isolation_and_Storage_Request__c.field-meta.xml
<CustomField>
    <fullName>Exosome_Isolation_and_Storage_Request__c</fullName>
    <label>Exosome Isolation and Storage Request</label>
    <length>50</length>
    <type>Text</type>
</CustomField>