force-app/main/default/objects/Baby__c/fields/Exosome_Specimen_Final_Volume__c.field-meta.xml
<CustomField>
    <fullName>Exosome_Specimen_Final_Volume__c</fullName>
    <label>Exosome Specimen Final Volume</label>
    <length>50</length>
    <type>Text</type>
</CustomField>