force-app/main/default/objects/Baby__c/fields/Exosome_Specimen_Identification_ISBT__c.field-meta.xml
<CustomField>
    <fullName>Exosome_Specimen_Identification_ISBT__c</fullName>
    <label>Exosome Specimen Identification (ISBT #)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>