force-app/main/default/objects/Baby__c/fields/Exosome_Specimen_Received__c.field-meta.xml
<CustomField>
    <fullName>Exosome_Specimen_Received__c</fullName>
    <label>Exosome Specimen Received</label>
    <type>DateTime</type>
</CustomField>