force-app/main/default/objects/Baby__c/fields/Exosome_Specimen_Volume_Processed__c.field-meta.xml
<CustomField>
    <fullName>Exosome_Specimen_Volume_Processed__c</fullName>
    <label>Exosome Specimen Volume Processed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10ml</fullName>
            </value>
            <value>
                <fullName>20ml</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>