force-app/main/default/objects/Baby__c/fields/Exosome_Status__c.field-meta.xml
<CustomField>
    <fullName>Exosome_Status__c</fullName>
    <description>Status of the Exosome Sample.</description>
    <inlineHelpText>Status of the Exosome Sample.</inlineHelpText>
    <label>Exosome Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quarantined</fullName>
                <label>QUARANTINED</label>
            </value>
            <value>
                <fullName>Permanent Storage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>