force-app/main/default/objects/Baby__c/fields/Exosome_Sterility_Bottle_ID_AST__c.field-meta.xml
<CustomField>
    <fullName>Exosome_Sterility_Bottle_ID_AST__c</fullName>
    <description>Bottle ID for the Exosome Sterility AST</description>
    <label>Exosome Sterility Bottle ID AST</label>
    <length>100</length>
    <type>Text</type>
</CustomField>