force-app/main/default/objects/Baby__c/fields/Exosome_Sterility_Bottle_ID_NST__c.field-meta.xml
<CustomField>
    <fullName>Exosome_Sterility_Bottle_ID_NST__c</fullName>
    <description>Bottle ID for the Exosome Sterility NST</description>
    <label>Exosome Sterility Bottle ID NST</label>
    <length>100</length>
    <type>Text</type>
</CustomField>