force-app/main/default/objects/Baby__c/fields/Exosome_Sterility_Result__c.field-meta.xml
<CustomField>
    <fullName>Exosome_Sterility_Result__c</fullName>
    <description>This field captures the sterility result. On 2024-08-09 we created additional fields that also capture this data but in more detail. We should remove this field from the layouts after a period of time 6mo - 1yr.</description>
    <label>Exosome Sterility Result</label>
    <length>50</length>
    <type>Text</type>
</CustomField>