force-app/main/default/objects/Baby__c/fields/Exosome_Sterility_Result_NST__c.field-meta.xml
<CustomField>
    <fullName>Exosome_Sterility_Result_NST__c</fullName>
    <description>This is the sterility result NST for Exosome.</description>
    <label>Exosome Sterility Result NST</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Growth</fullName>
            </value>
            <value>
                <fullName>Negative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>