force-app/main/default/objects/Baby__c/fields/Exosome_Storage_Location__c.field-meta.xml
<CustomField>
    <fullName>Exosome_Storage_Location__c</fullName>
    <description>Storage location for the Exosome sample.</description>
    <inlineHelpText>Storage location for the Exosome sample.</inlineHelpText>
    <label>Exosome Storage Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>