force-app/main/default/objects/Baby__c/fields/Exosomes_Cryogenically_Preserved__c.field-meta.xml
<CustomField>
    <fullName>Exosomes_Cryogenically_Preserved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if exosomes have been stored/cryogenically preserved.</description>
    <label>Exosomes Cryogenically Preserved</label>
    <type>Checkbox</type>
</CustomField>