force-app/main/default/objects/Baby__c/fields/Folder_ID__c.field-meta.xml
<CustomField>
    <fullName>Folder_ID__c</fullName>
    <description>Used by Vitalant as a unique identifier associated with each unit / baby.</description>
    <externalId>true</externalId>
    <label>Folder ID</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>