force-app/main/default/objects/Baby__c/fields/Genome_Consent_Complete__c.field-meta.xml
<CustomField>
    <fullName>Genome_Consent_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will track the client to see if they have completed the Genome Consent on Veritas/LetsGetChecked.</description>
    <inlineHelpText>This field will track the client to see if they have completed the Genome Consent on Veritas/LetsGetChecked.</inlineHelpText>
    <label>Genome Consent Complete</label>
    <type>Checkbox</type>
</CustomField>