force-app/main/default/objects/Baby__c/fields/Genome_Order_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Genome_Order_Complete_Date__c</fullName>
    <description>This is the date that the Genome (MyGenome or MyNewborn) was set to complete by Veritas.</description>
    <inlineHelpText>This is the date that the Genome (MyGenome or MyNewborn) was set to complete by Veritas.</inlineHelpText>
    <label>Genome Order Complete Date</label>
    <type>Date</type>
</CustomField>