force-app/main/default/objects/Baby__c/fields/Get_CT_from_Placenta__c.field-meta.xml
<CustomField>
    <fullName>Get_CT_from_Placenta__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will allow lab team to flag and notify CS team there was an issue with the CT and we have the option to pull it from the Placenta.</description>
    <inlineHelpText>This field will allow lab team to flag and notify CS team there was an issue with the CT and we have the option to pull it from the Placenta.</inlineHelpText>
    <label>Get CT from Placenta?</label>
    <type>Checkbox</type>
</CustomField>