force-app/main/default/objects/Baby__c/fields/Get_CT_From_Placenta_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Get_CT_From_Placenta_Resolution__c</fullName>
    <description>This field will hold the notes/resolution from getting the CT sample from the Placenta.</description>
    <inlineHelpText>This field will hold the notes/resolution from getting the CT sample from the Placenta.</inlineHelpText>
    <label>Get CT From Placenta Resolution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>