force-app/main/default/objects/Baby__c/fields/Is_canceled__c.field-meta.xml
<CustomField>
    <fullName>Is_canceled__c</fullName>
    <formula>Lab__r.Is_Voided_LU__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is canceled</label>
    <type>Checkbox</type>
</CustomField>