force-app/main/default/objects/Baby__c/fields/ISBT_My_Genome__c.field-meta.xml
<CustomField>
    <fullName>ISBT_My_Genome__c</fullName>
    <description>This is the ISBT for My Genome sample.</description>
    <inlineHelpText>This is the ISBT for My Genome sample.</inlineHelpText>
    <label>ISBT My Genome</label>
    <length>50</length>
    <type>Text</type>
</CustomField>